# Urania

./: .git-lb-checkout  .instructions_for_maintainers  CMakeLists.txt  README.md  toolchain.cmake
FT/Espresso/: CMakeLists.txt  README.md  StandAloneCMakeLists.txt  setenv.sh
FT/Espresso/Espresso/: BDecayModel.hh  Calibration.hh  CalibrationFunction.hh  DiracDeltaDistribution.hh  Distribution.hh  ExponentialDistribution.hh  Function.hh  GLMBSpline.hh  GLMBuilder.hh  GLMCalibration.hh  GLMCalibrationFunction.hh  GLMModel.hh  GLMNSpline.hh  GLMPolynomial.hh  GSLWrappers.hh  LikelihoodMaximizer.hh  LikelihoodSolver.hh  Matrix.hh  MultiRootFinder.hh  NormalDistribution.hh  NumericDistribution.hh  RandomNumberGeneration.hh  RegressionFunctions.hh  RooGLMFunction.hh  RootFinder.hh  Solver.hh  StandardCalibration.hh  Statistics.hh  SumDistribution.hh  TagCollector.hh  Tagging.hh  TaggingLikelihood.hh  TaggingResult.hh  TaggingResultGraphics.hh  TaggingResultImpl.hh  TaggingResultMetrics.hh  TemplateTools.hh  ToyTagger.hh  TypicalCalibration.hh  UniformDistribution.hh  (+1 more)
FT/Espresso/dict/: EspressoDict.hh  EspressoDict.xml
FT/Espresso/doc/: Doxyfile  release.notes
FT/Espresso/src/: BDecayModel.cpp  Calibration.cpp  ExponentialDistribution.cpp  Function.cpp  GLMBSpline.cpp  GLMBuilder.cpp  GLMCalibration.cpp  GLMCalibrationFunction.cpp  GLMModel.cpp  GLMNSpline.cpp  GLMPolynomial.cpp  GSLWrappers.cpp  LikelihoodMaximizer.cpp  LikelihoodSolver.cpp  Matrix.cpp  MultiRootFinder.cpp  NormalDistribution.cpp  NumericDistribution.cpp  RandomNumberGeneration.cpp  RegressionFunctions.cpp  RooGLMFunction.cpp  RootFinder.cpp  StandardCalibration.cpp  Statistics.cpp  SumDistribution.cpp  TagCollector.cpp  TaggingLikelihood.cpp  TaggingResult.cpp  TaggingResultGraphics.cpp  TaggingResultImpl.cpp  TaggingResultMetrics.cpp  ToyTagger.cpp  TypicalCalibration.cpp  UniformDistribution.cpp  Vector.cpp
FT/Espresso/test/: OS_Combination_Calibration.xml  OS_Combination_Calibration_NSpline_LogitLink.xml  OS_Combination_Calibration_NSpline_RLogitLink.xml  templates_mistag.root  testRooGLMFunction.C  testRooGLMFunction.py
Math/MCLimit/: CMakeLists.txt
Math/MCLimit/cmt/: requirements
Math/MCLimit/dict/: MCLimitDict.h
Math/MCLimit/doc/: release.notes
Math/MCLimit/examples/: tau23mu.py
Math/MCLimit/src/: junkInterface.cpp  mclimit_csm.C  mclimit_csm.h
Math/SomeUtils/: CMakeLists.txt
Math/SomeUtils/SomeUtils/: Measurement.h
Math/SomeUtils/cmt/: requirements
Math/SomeUtils/dict/: BDTSToolXDict.h  BDTSToolXDict.xml
Math/SomeUtils/doc/: release.notes
Math/SomeUtils/operators/: toGauss_2008
Math/SomeUtils/src/: Measurement.cpp  vdouble.C
PIDCalib/CalibDataScripts/: CMakeLists.txt
PIDCalib/CalibDataScripts/CalibDataScripts/: CheckFitResults.h  DStFit.h  DStFit_MuonUnBiased.h  GetData.h  IncLcFit.h  JpsiFit.h  JpsieeFit.h  K0SFit.h  LHCbStyle.h  Lam0Fit.h  Lam0Fit_MuonUnBiased.h  LcfBFit.h  LcfromBFit.h  MC_DStFit.h  SetSpectatorVars.h
PIDCalib/CalibDataScripts/cmt/: requirements
PIDCalib/CalibDataScripts/doc/: README.PYTHONSCRIPTS  release.notes
PIDCalib/CalibDataScripts/jobs/: Charm14nb_PhiStrip.csh  DStJob_runRange.sh  DSt_MuonUnBiasedJob_runRange.sh  JpsiJob_runRange.sh  Lam0Job_runRange.sh  Lam0_MuonUnBiasedJob_runRange.sh  MC_DStJob.sh
PIDCalib/CalibDataScripts/scripts/: setenv_dirac.csh  setenv_dirac.sh
PIDCalib/CalibDataScripts/src/: CheckFitResults.cpp  ChopUpMuonTrees.cpp  DStFit.cpp  DStFit_MuonUnBiased.cpp  GetData.cpp  IncLcFit.cpp  JpsiFit.cpp  JpsieeFit.cpp  K0SFit.cpp  Lam0Fit.cpp  Lam0Fit_MuonUnBiased.cpp  LcfromBFit.cpp  MC_DStFit.cpp  MergeCharges.cpp  MergeProtonLines.cpp  MergeProtonLines_MuonUnBiased.cpp  SetSpectatorVars.cpp  TestCheckFitResults.cpp
PIDCalib/CalibDataScripts/src_Run2/: DStFit.cpp  JpsiFit.cpp  Lam0Fit.cpp  MergeCharges.cpp  MergeProtonLines.cpp  README  SetSpectatorVars.cpp
PIDCalib/CalibDataScripts/src_S21/: DStFit.cpp  GetData.cpp  IncLcFit.cpp  JpsiFit.cpp  JpsieeFit.cpp  Lam0Fit.cpp  LcfBFit.cpp  MergeCharges.cpp  MergeProtIncLc.cpp  MergeProtonLines.cpp  SetSpectatorVars.cpp
PIDCalib/PIDPerfScripts/: CMakeLists.txt
PIDCalib/PIDPerfScripts/cmt/: requirements
PIDCalib/PIDPerfScripts/doc/: README  release.notes
PIDCalib/PIDPerfScripts/src/: Test_Data.cpp  Test_EvtData.cpp  Test_EvtMC.cpp  Test_MC.cpp  Test_PerfCalc.cpp  Test_PerfCalc_Plots.cpp  Test_PerfCalc_Tables.cpp
PIDCalib/PIDPerfTools/: CMakeLists.txt
PIDCalib/PIDPerfTools/PIDPerfTools/: DataBinCuts.h  EvtTrackDataSet.h  Exceptions.h  GenericDataSet.h  LHCbPIDTrackDataSet.h  MUONTrackDataSet.h  MultiPerfCalculator.h  MultiTrackCalibTool.h  PIDCrossTable.h  PIDResult.h  PIDTable.h  PIDTrackDataSet.h  PerfCalculator.h  RICHTrackDataSet.h  TrackDataSet.h  TrkPIDParams.h  WeightDataSetTool.h
PIDCalib/PIDPerfTools/cmt/: requirements
PIDCalib/PIDPerfTools/dict/: PIDPerfToolsDict.h  PIDPerfToolsDict.xml
PIDCalib/PIDPerfTools/doc/: release.notes
PIDCalib/PIDPerfTools/src/: DataBinCuts.cpp  EvtTrackDataSet.cpp  Exceptions.cpp  GenericDataSet.cpp  LHCbPIDTrackDataSet.cpp  MUONTrackDataSet.cpp  MultiPerfCalculator.icpp  MultiPerfCalculator_imp.cpp  MultiTrackCalibTool.cpp  PIDCrossTable.cpp  PIDTable.cpp  PIDTrackDataSet.cpp  PerfCalculator.icpp  PerfCalculator_imp.cpp  RICHTrackDataSet.cpp  TrackDataSet.cpp  WeightDataSetTool.icpp  WeightDataSetTool_imp.cpp
Phys/A2MuMu/: CMakeLists.txt
Phys/A2MuMu/cmt/: requirements
Phys/A2MuMu/doc/: release.notes
Phys/B2CCtuples/: CMakeLists.txt
Phys/Bs2MuMu/: CMakeLists.txt
Phys/Bs2MuMu/monitor/: README  (+3 more)
Phys/BsJPsiKst/: CMakeLists.txt
Phys/BsKstKst/: CMakeLists.txt
Phys/Ks2MuMu/: CMakeLists.txt
Phys/Urania/: CMakeLists.txt
PhysFit/P2VV/: ._build.sh  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README  README.md  p2vvsetup.csh  svn_jeroen.py
PhysFit/RooPhysFitter/: CMakeLists.txt
PhysFit/V0hhFitter/: CMakeLists.txt
PhysTools/Meerkat/: CMakeLists.txt  README.md  StandAloneMakefile
RootTools/MoreSimpleTools/: CMakeLists.txt
RootTools/SimpleTools/: CMakeLists.txt
WGCommonTools/QEE/: CMakeLists.txt
(+6229 files in other folders)
