################################################################################
# Package: Urania
################################################################################
gaudi_subdir(Urania v2r2)

find_package(ROOT)
find_package(pyanalysis)
find_package(pytools)

gaudi_install_python_modules()

